# btx-renderer

./: CMakeLists.txt  plugins.json
renderer/: Batch.cpp  Batch.hpp  Entity.cpp  Entity.hpp  Light.cpp  Light.hpp  Model.cpp  Model.hpp  Precompiled.hpp  RenderFrontend.Init.cpp  RenderFrontend.Model.cpp  RenderFrontend.Pipeline.cpp  RenderFrontend.Render.cpp  RenderFrontend.Texture.cpp  RenderFrontend.cpp  RenderFrontend.hpp  Texture.cpp  Texture.hpp  View.cpp  View.hpp  Volume.cpp  Volume.hpp
shaders/: default.hlsl  screen.hlsl
src/: RenderFrontend.cpp  RenderFrontend.hpp
